<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant_bg"
    android:padding="@dimen/margin_small"
    tools:context=".ui.home.HomeFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/citySearchView"
        style="@style/TextAppearance_SearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:iconifiedByDefault="false"
        app:queryHint="@string/city_filter_hint" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/citiesRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/citySearchView"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_city" />

    <TextView
        android:id="@+id/tvEmptyList"
        style="@style/TextAppearance_ScreenMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_no_data"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>